package model;

// Abstract class for Gate
public abstract class Gate {
    public abstract void openGate();
    public abstract void closeGate();
}

