@startuml
abstract class Gate {
    + openGate() : void
    + closeGate() : void
}

class EntranceGate extends Gate {
}

class ExitGate extends Gate {
}

class ParkingGarage {
    - totalSpots : int
    - availableSpots : int
    + getAvailableSpots() : int
    + parkCar() : Ticket
    + exitCar(ticket : Ticket) : boolean
    + listAllTickets() : List<Ticket>
    + findTicketById(ticketId : String) : Ticket
}

class ParkingSpot {
    - spotNumber : int
    - isOccupied : boolean
    + occupySpot() : void
    + freeSpot() : void
    + isAvailable() : boolean
}

class Ticket {
    - ticketId : String
    - issueTime : Date
    - paid : boolean
    + getFee(currentTime : Date) : double
    + pay(amount : double) : boolean
    + isPaid() : boolean
    + getTicketId() : String
}

class Payment {
    - amount : double
    + processPayment(ticket : Ticket, amount : double) : boolean
}

class PaymentMachine {
    + payTicket(ticket : Ticket, amount : double) : boolean
}

class Display {
    - availableSpots : int
    + updateAvailableSpots(spots : int) : void
}

interface UserInterface {
    + printMessage(message : String) : void
    + getInput(prompt : String) : String
    + displayAvailableSpots(parkingGarage : ParkingGarage) : void
    + processPayment(ticket : Ticket, paymentMachine : PaymentMachine) : void
}

class Main {
    + main(args : String[]) : void
}

class Controller {
    - ui : UserInterface
    - garage : ParkingGarage
    - paymentMachine : PaymentMachine
    + run() : void
    - handleEntrance() : void
    - handlePayment() : void
    - handleExit() : void
    - listAllTickets() : void
    - getMenu() : String
}

' Associations
Main --> Controller : initializes
Controller --> UserInterface : coordinates
Controller --> ParkingGarage : manages
Controller --> PaymentMachine : processes
ParkingGarage --> Display : updates
ParkingGarage *-- "0..*" ParkingSpot : contains
ParkingGarage *-- "1..2" Gate : has
ParkingSpot o-- "0..1" Ticket : assigned
PaymentMachine --> Payment : uses
Payment --> Ticket : processes
ExitGate ..|> Gate
EntranceGate ..|> Gate

@enduml
